[package]
name = "tera-introspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.1"
pest = { version = "2.4.1", features = ["serde_json"] }
pest_derive = "2.4.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
