[package]
name = "tera-introspection"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/tera-introspection"
repository = "https://github.com/tyrchen/tera-introspection"
homepage = "https://github.com/tyrchen/tera-introspection"
description = """
Utilities for introspecting Tera templates.
"""
readme = "README.md"
categories = ["template-engine"]
keywords = ["template", "html", "django", "markup", "jinja2"]

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.1"
pest = { version = "2.4.1", features = ["serde_json"] }
pest_derive = "2.4.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
